# serverside-rust

./: Cargo.toml  Rocket.toml
src/: db.rs  main.rs  models.rs  routes.rs
src/db/: posts.rs
src/db/sql/: add_post.sql  get_post.sql  get_posts.sql
templates/: base.html  post.html  posts.html
